# cookie

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
src/: app.rs  main.rs  models.rs  service.rs
src/app/: mod.rs  model.rs  types.rs  update.rs  view.rs
src/app/components/: chat.rs  messages.rs
src/app/components/snapshots/: cookie__app__components__chat__tests__render_chat.snap
src/app/model/: editor.rs  focus.rs  markdown.rs  messages.rs  mod.rs  scroll.rs  session.rs  session_manager.rs  setting_manager.rs
src/app/update/: input_editor.rs  messages.rs  mod.rs  session.rs
src/app/view/: chat.rs  constants.rs  editor_viewport.rs  error_popup.rs  messages.rs  messages_viewport.rs  mod.rs  session.rs  session_manager.rs  setting_manager.rs  utils.rs
src/app/view/components/: chat.rs  messages.rs  mod.rs  session_manager.rs
src/app/view/components/snapshots/: cookie__app__view__components__chat__tests__render_chat.snap
src/app/view/snapshots/: cookie__app__view__chat__tests__render_chat.snap  cookie__app__view__session__tests__render_session.snap
src/app/view/utils/: area.rs  markdown.rs  paragraph.rs  styled_line.rs
src/app/view/widgets/: scroll.rs
src/app/view/widgets/snapshots/: cookie__app__view__components__chat__tests__render_chat.snap
src/models/: configs.rs  constants.rs  mod.rs  settings.rs
src/proto/: chat.proto  llm.proto
src/service/: chat.rs  chat_session_worker.rs  client.rs  database.rs  llms.rs  mod.rs  models.rs  stores.rs  utils.rs
src/service/client/: api.rs  mock.rs  mod.rs
src/service/database/: schema.sql
src/service/llms/: mock.rs  open_ai.rs
src/service/llms/open_ai/: api.rs
src/service/stores/: chat_event_store.rs  chat_session_store.rs
